--- a/src/main/webapp/pages/CompanyProfile/CompanyProfile.html
+++ b/src/main/webapp/pages/CompanyProfile/CompanyProfile.html
@@ -105,37 +105,29 @@
                                         inputtype="text" placeholder="Enter value"></wm-form-field>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn18">
-                                        <wm-form-field name="feinNumber" displayname="Employer Identification Number (EIN)" show="true" primary-key="false" generator="assigned" key="feinNumber" type="string" readonly="false" required="true" widget="text"
-                                        maxchars="255" inputtype="text" placeholder="Enter value" validationmessage="Employer Identification Number (EIN) is required" hint="Example: 12-3456789"></wm-form-field>
+                                        <wm-form-field name="insuranceCompany" displayname="Insurance Company" show="true" primary-key="false" generator="assigned" key="insuranceCompany" type="string" readonly="false" required="true" widget="text" maxchars="255"
+                                        inputtype="text" placeholder="Enter value" validationmessage="Insurance Company is required"></wm-form-field>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow7">
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn19">
-                                        <wm-form-field name="insuranceCompany" displayname="Insurance Company" show="true" primary-key="false" generator="assigned" key="insuranceCompany" type="string" readonly="false" required="true" widget="text" maxchars="255"
-                                        inputtype="text" placeholder="Enter value" validationmessage="Insurance Company is required"></wm-form-field>
-                                    </wm-gridcolumn>
-                                    <wm-gridcolumn columnwidth="4" name="gridcolumn22">
                                         <wm-form-field name="insuranceExpires" displayname="Insurance Expiration Date" show="true" primary-key="false" generator="assigned" key="insuranceExpires" type="date" readonly="false" required="true" widget="date" placeholder="Select date"
                                         outputformat="yyyy-MM-dd" mindate="bind:Variables.Today.dataSet.dataValue | toDate: 'yyyy-MM-dd'" validationmessage="Insurance Expiration Date is required" datepattern="MM-dd-yyyy"></wm-form-field>
                                     </wm-gridcolumn>
+                                    <wm-gridcolumn columnwidth="4" name="gridcolumn22">
+                                        <wm-form-field name="coi" displayname="Certificate of Insurance (COI)" show="true" primary-key="false" generator="assigned" key="coi" type="blob" readonly="false" required="true" widget="upload" maxchars="255" validationmessage="Certificate of Insurance is required"></wm-form-field>
+                                    </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn21">
                                         <wm-anchor margin="unset 0.5em" name="anchor1" target="_blank" caption=""></wm-anchor>
-                                        <wm-form-field name="coi" displayname="Certificate of Insurance (COI)" show="true" primary-key="false" generator="assigned" key="coi" type="blob" readonly="false" required="true" widget="upload" maxchars="255"
-                                        validationmessage="Certificate of Insurance is required"></wm-form-field>
-                                    </wm-gridcolumn>
-                                </wm-gridrow>
-                                <wm-gridrow name="gridrow8">
-                                    <wm-gridcolumn columnwidth="4" name="gridcolumn20">
                                         <wm-form-field name="lastUpdated" displayname="Last Updated" show="true" primary-key="false" generator="assigned" key="lastUpdated" type="date" readonly="true" required="false" widget="date" placeholder="Select date"
                                         outputformat="yyyy-MM-dd" datepattern="MM-dd-yyyy" disabled="true" defaultvalue="CURRENT_DATE"></wm-form-field>
-                                    </wm-gridcolumn>
-                                    <wm-gridcolumn name="gridcolumn1" columnwidth="4" padding="unset 1em unset unset">
-                                        <wm-form-field name="active" displayname="Active" show="false" primary-key="false" generator="assigned" key="active" type="boolean" readonly="false" required="false" widget="checkbox" defaultvalue="true" disabled="true"
-                                        checkedvalue="true" uncheckedvalue="false" hint="When &quot;Active&quot;, your company can be selected on forms in the municipalities where it has been approved for business, and your company forms can move forward with inspection scheduling. If your insurance has expired, your company will become inactive in CivicXpress until you provide a new COI."></wm-form-field>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                             </wm-layoutgrid>
                             <wm-form-field name="id" displayname="Id" show="false" primary-key="true" generator="identity" key="id" type="integer" readonly="true" required="true" step="0" widget="number" inputtype="number" placeholder=""></wm-form-field>
+                            <wm-form-field name="active" displayname="Active" show="false" primary-key="false" generator="assigned" key="active" type="boolean" readonly="false" required="false" widget="checkbox" defaultvalue="true" disabled="true"
+                            checkedvalue="true" uncheckedvalue="false" hint="When &quot;Active&quot;, your company can be selected on forms in the municipalities where it has been approved for business, and your company forms can move forward with inspection scheduling. If your insurance has expired, your company will become inactive in CivicXpress until you provide a new COI."
+                            placeholder=""></wm-form-field>
                             <wm-form-action key="save" display-name="Save" show="true" class="form-save btn-primary" iconclass="wi wi-save" title="Save" action="" disabled="false" type="submit" update-mode="true"></wm-form-action>
                             <wm-form-action key="reset" display-name="Reset" show="true" class="form-reset btn-secondary" iconclass="wi wi-refresh" title="Reset" action="reset()" disabled="false" type="button" update-mode="true"></wm-form-action>
                         </wm-liveform>
